[gd_scene load_steps=18 format=3 uid="uid://6w75snxv6p0s"]

[ext_resource type="Script" path="res://CanvasLayer.gd" id="1_ksffx"]
[ext_resource type="Script" path="res://TitleScreenBackground.gd" id="2_eswwq"]
[ext_resource type="Texture2D" uid="uid://b1la72jsykss2" path="res://art/Magic-Cliffs-Environment/PNG/sky.png" id="2_q5k00"]
[ext_resource type="FontFile" uid="uid://cgsg5v5wpuq55" path="res://art/Font/ThaleahFat.ttf" id="2_rcp5s"]
[ext_resource type="Texture2D" uid="uid://1cm1y866v6wd" path="res://art/Magic-Cliffs-Environment/PNG/sea.png" id="3_n7534"]
[ext_resource type="Texture2D" uid="uid://b0uovkqu3ry00" path="res://art/Magic-Cliffs-Environment/PNG/clouds.png" id="4_l7at6"]
[ext_resource type="Texture2D" uid="uid://b52ttjf72lkbg" path="res://art/Magic-Cliffs-Environment/PNG/far-grounds.png" id="5_w2d5a"]
[ext_resource type="Texture2D" uid="uid://ugya547d2my7" path="res://art/Player files/spritesheets/run.png" id="8_dg13s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iiyan"]
atlas = ExtResource("8_dg13s")
region = Rect2(0, 0, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt68g"]
atlas = ExtResource("8_dg13s")
region = Rect2(128, 0, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmdl0"]
atlas = ExtResource("8_dg13s")
region = Rect2(256, 0, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_do37v"]
atlas = ExtResource("8_dg13s")
region = Rect2(384, 0, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_svv13"]
atlas = ExtResource("8_dg13s")
region = Rect2(512, 0, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hkwn"]
atlas = ExtResource("8_dg13s")
region = Rect2(640, 0, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggjlc"]
atlas = ExtResource("8_dg13s")
region = Rect2(768, 0, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhaqk"]
atlas = ExtResource("8_dg13s")
region = Rect2(896, 0, 128, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_x1qkf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiyan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt68g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmdl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_do37v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svv13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hkwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggjlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhaqk")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[node name="ui" type="CanvasLayer"]
script = ExtResource("1_ksffx")

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -108.0
offset_right = 160.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.282353, 0.635294, 0.976471, 1)
theme_override_fonts/font = ExtResource("2_rcp5s")
theme_override_font_sizes/font_size = 40
text = "Elemental Sword"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -240.0
offset_right = 48.0
offset_bottom = -185.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_rcp5s")
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TitleScreenBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_eswwq")

[node name="Sky" type="ParallaxLayer" parent="TitleScreenBackground"]
motion_mirroring = Vector2(960, 0)

[node name="Sprite2D" type="Sprite2D" parent="TitleScreenBackground/Sky"]
scale = Vector2(8.57143, 1.22)
texture = ExtResource("2_q5k00")
centered = false

[node name="Sea" type="ParallaxLayer" parent="TitleScreenBackground"]
motion_mirroring = Vector2(960, 0)

[node name="Sprite2D" type="Sprite2D" parent="TitleScreenBackground/Sea"]
position = Vector2(0, 369)
scale = Vector2(8.57143, 1.78)
texture = ExtResource("3_n7534")
centered = false

[node name="Clouds" type="ParallaxLayer" parent="TitleScreenBackground"]
position = Vector2(0, 68)
motion_mirroring = Vector2(960, 0)

[node name="Sprite2D" type="Sprite2D" parent="TitleScreenBackground/Clouds"]
position = Vector2(0, 95)
scale = Vector2(0.883, 0.883)
texture = ExtResource("4_l7at6")
centered = false

[node name="Clouds2" type="ParallaxLayer" parent="TitleScreenBackground"]
position = Vector2(0, 68)
motion_mirroring = Vector2(960, 0)

[node name="Sprite2D" type="Sprite2D" parent="TitleScreenBackground/Clouds2"]
position = Vector2(480, 95)
scale = Vector2(0.882353, 0.883)
texture = ExtResource("4_l7at6")
centered = false

[node name="Ground" type="ParallaxLayer" parent="TitleScreenBackground"]
motion_mirroring = Vector2(960, 0)

[node name="Sprite2D" type="Sprite2D" parent="TitleScreenBackground/Ground"]
scale = Vector2(1.558, 1.558)
texture = ExtResource("5_w2d5a")
centered = false
offset = Vector2(0, 237)

[node name="PlayerStartScreen" type="AnimatedSprite2D" parent="."]
position = Vector2(536, 436)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_x1qkf")
animation = &"run"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
